# MLPro-Int-SB3

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pypi_deploy.yml
.github/workflows.old/: pypi_deploy.yml
deployment/conda/: meta.yaml
deployment/pypi/: setup.cfg
doc/rtd/: Makefile  conf.py  index.rst  requirements.txt
doc/rtd/content/01_welcome/: main.rst
src/: setup.py
src/mlpro_int_sb3/wrappers/: __init__.py  basics.py
test/: test_examples.py  test_sb3_policy_wrapper.py
test/howtos/: howto_rl_agent_001_train_and_reload_single_agent_gym.py  howto_rl_wp_002_validation_wrapped_sb3_on_policy.py  howto_rl_wp_003_validation_wrapped_sb3_off_policy.py
test/howtos/agent/: howto_rl_agent_001_train_and_reload_single_agent_gym.py  howto_rl_agent_002_train_and_reload_single_agent_mujoco_cartpole_discrete.py  howto_rl_agent_002_train_and_reload_single_agent_mujoco_cartpole_discrete.py.off  howto_rl_agent_003_train_and_reload_single_agent_mujoco_cartpole_continuous.py  howto_rl_agent_003_train_and_reload_single_agent_mujoco_cartpole_continuous.py.off  howto_rl_agent_021_train_and_reload_single_agent_mujoco_cartpole_discrete.py  howto_rl_agent_022_train_and_reload_single_agent_mujoco_cartpole_continuous.py
test/howtos/att/: howto_rl_att_001_train_and_reload_single_agent_gym_sd.py  howto_rl_att_002_train_and_reload_single_agent_mujoco_sd_cartpole_discrete.py  howto_rl_att_003_train_and_reload_single_agent_mujoco_sd_cartpole_continuous.py  howto_rl_att_003_train_and_reload_single_agent_mujoco_sd_cartpole_continuous.py.off
test/howtos/environment/: howto_rl_env_001_train_agent_with_SB3_policy_on_robothtm_environment.py  howto_rl_env_002_train_agent_with_sb3_policy_on_double_pendulum_environment.py.off  howto_rl_env_003_train_agent_with_sb3_policy_on_2D_collision_avoidance_environment.py
test/howtos/mb/: howto_rl_mb_001_train_and_reload_model_based_agent_gym.py  howto_rl_mb_002_robothtm_environment.py.off
test/howtos/rl/: howto_rl_agent_011_train_and_reload_single_agent_gym.py  howto_rl_att_001_train_and_reload_single_agent_gym_sd.py  howto_rl_env_001_train_agent_with_SB3_policy_on_robothtm_environment.py  howto_rl_wp_001_train_agent_with_sb3_policy.py
test/howtos/wrapper/: howto_rl_wp_001_train_agent_with_sb3_policy.py  howto_rl_wp_002_validation_wrapped_sb3_on_policy.py  (+1 more)
(+30 files in other folders)
