[metadata]
name = mypackage
version = 1.0.0
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro: Integration River
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mypackage.readthedocs.io
project_urls = 
    Bug Tracker = https://mypackage.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    dill
    numpy
    matplotlib
    multiprocess
    mlpro
