[metadata]
name = mlpro-int-sb3
version = 1.0.1
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro: Integration StableBaselines3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro-int-sb3.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro-int-sb3.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    mlpro_int_gymnasium[full]>=1.0.2
    mlpro_int_mujoco[full]>=1.0.1
    stable_baselines3>=2.3.0
